# MakerClub-TapeRation

./: README.md
dashboard-ui/: bun.lockb  package-lock.json  package.json
dashboard-ui/src/lib/: api.ts  stores.ts
dashboard-ui/src/routes/: +layout.svelte  +page.svelte  styles.scss
dashboard-ui/src/routes/login/: +page.svelte
master-server/: .env.example  Cargo.toml  build_arch.sh  open-api.yaml
master-server/migration/src/: m20220101_000001_create_table.rs
master-server/src/: env_config.rs  main.rs  names.rs  websocket.rs
master-server/src/api/: cards.rs  error.rs  mod.rs
master-server/src/api/types/: mod.rs
master-server/src/db/: connection.rs
master-server/src/db/entities/: mod.rs  participants.rs  prelude.rs  transaction_log.rs
node-server/: .env.example  .gitignore  Cargo.toml  build_arch.sh
node-server/src/: actions.rs  env_config.rs  gpio.rs  gpio_queue.rs  keyboard_dev.rs  main.rs  master_api.rs  websocket.rs
node-ui/: package.json  svelte.config.js
node-ui/src/lib/: api.ts  stores.ts
node-ui/src/lib/components/: CountdownTimer.svelte  IconContainer.svelte  IconVideo.svelte  NoiseBackground.svelte  PageTitle.svelte  StepNumber.svelte
node-ui/src/lib/pages/: CampusCardNotFound.svelte  RegistrationExists.svelte  RegistrationSuccessful.svelte  ScanCampusCard.svelte  TapeLengthSelection.svelte
node-ui/src/lib/svg/: ScanBarcode.svelte
node-ui/src/routes/: +layout.svelte  +page.svelte  styles.scss  vars.scss
rust-server/: .gitignore
rust-server/src/: env_config.rs  main.rs
rust-server/src/api/: error.rs
rust-server/src/db/: connection.rs  mod.rs
rust-server/src/db/entities/: prelude.rs
tape-ard-slave/src/: main.cpp
