[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" } # depends on your needs

pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rust-embed = { version = "8", features = ["warp-ex"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rppal = "0.17.1"
debouncr = "0.2.2"
once_cell = "1.19.0"
dotenv = "0.15.0"
rand = "0.8.5"
chrono = "0.4.34"
utoipa-redoc = "3.0.0"
axum = "0.7.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.20"


[features]
serve_static = []
